--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiogoogle>=5.15.0",
     "aiogram>=3.21.0",
     "dotenv>=0.9.9",
 ]
